--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2016",                                
     "module": "commonjs",                                
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,            
     "strict": true,
     "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
