--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "arrowParens": "always",
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2
 }
