--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.2",
-    "prettier": "^3.1.1"
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^42.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.2"
   }
 }
