--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "priorityqueuejs": "^2.0.0",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.2",
+    "@types/priorityqueuejs": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^42.0.0",
